[package]
name = "findfox"
version = "0.1.0"
authors = ["build"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
unix_socket = "0.5.0"
xcb = "0.9.0"
