[package]
name = "findfox"
version = "0.1.0"
authors = ["build"]
edition = "2018"
description = "Send remote commands to Firefox instances"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = "0.9.0"

[package.metadata.deb]
extended-description = "Send remote commands to Firefox instances"
