[package]
name = "findfox"
version = "0.1.0"
authors = ["ayosec@gmail.com"]
edition = "2021"
description = "Send remote commands to Firefox instances"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
base64 = "0.13.0"
dbus = "0.9.5"

[package.metadata.deb]
extended-description = "Send remote commands to Firefox instances"
